--- a/uwsgi.conf.ini
+++ b/uwsgi.conf.ini
@@ -1,1 +1,23 @@
-/var/www/uwsgi.conf.ini
+# to run:
+#   uwsgi --ini uwsgi.conf.ini
+
+[uwsgi]
+
+base_path = /var/www/sandbox/py/threads_lock
+
+plugin = python3
+protocol = http
+master = true
+vacuum = true
+die-on-term = true
+disable-logging = true
+
+workers = 1
+threads = 2
+
+socket = 127.0.0.1:5000
+
+virtualenv = %(base_path)/venv
+pythonpath = %(base_path)
+chdir = %(base_path)
+module = app:app
